// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly regarding the snapshot 1`] = `
<button
  className="button"
  itemType="button"
  onClick={[Function]}
>
  <div
    className="button-text"
  />
</button>
`;

exports[`DetailsView renders correctly according to snapshot 1`] = `
<div
  className="details-view-container"
>
  <div
    className="details-view-website-title"
  >
    test
  </div>
  <div
    className="details-view-details-table"
  >
    <div
      className="details-view-table-row"
    >
      <div
        className="details-view-table-label"
      >
        Spent here:
      </div>
      <div
        className="details-view-table-value"
      >
        NaN:00:NaN
      </div>
    </div>
    <div
      className="details-view-table-row"
    >
      <div
        className="details-view-table-label"
      >
        Last visit:
      </div>
      <div
        className="details-view-table-value"
      >
        Invalid Date
      </div>
    </div>
    <div
      className="details-view-table-row"
    >
      <div
        className="details-view-table-label"
      >
        Total visits:
      </div>
      <div
        className="details-view-table-value"
      >
        invalid-mocked-date
      </div>
    </div>
  </div>
  <button
    className="button"
    itemType="button"
    onClick={[Function]}
  >
    <div
      className="button-text"
    >
      Go back
    </div>
  </button>
</div>
`;

exports[`ExpandedView renders correctly according to snapshot 1`] = `
Array [
  <div
    className="duration-header"
  >
    <div
      className="duration-header-text"
    >
      Spent here
    </div>
    <div
      className="sorting-container"
    >
      <div
        className="sorting-options-label"
      >
        Sort: 
      </div>
      <div
        className="sorting-options-list-container"
      >
        <div
          className="sorting-option-tile-container"
          onClick={[Function]}
        >
          <div
            className="sorting-option-tile-label"
          >
            None
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="expanded-view-list-container"
  >
    <ul
      className="expanded-view-list"
    >
      <li>
        <div
          className="expanded-view-tile-container"
        >
          <div
            className="expanded-view-icon-container"
          >
            <img
              className="expanded-view-icon"
              height={20}
              src="https://icons.duckduckgo.com/ip3/w3schools.com.ico"
              width={20}
            />
          </div>
          <div
            className="expanded-view-domain-container"
          >
            <div
              className="expanded-view-domain-text"
              onClick={[Function]}
            >
              w3schools.com
            </div>
          </div>
          <div
            className="expanded-view-time-spent-text-container"
          >
            <div
              className="expanded-view-time-spent-text"
            >
              0
              :
              01
              :
              13
            </div>
          </div>
          <button
            className="button"
            itemType="button"
            onClick={[Function]}
          >
            <div
              className="button-text"
            >
              Details
            </div>
          </button>
        </div>
      </li>
      <li>
        <div
          className="expanded-view-tile-container"
        >
          <div
            className="expanded-view-icon-container"
          >
            <img
              className="expanded-view-icon"
              height={20}
              src="https://icons.duckduckgo.com/ip3/ackoverflow.com.ico"
              width={20}
            />
          </div>
          <div
            className="expanded-view-domain-container"
          >
            <div
              className="expanded-view-domain-text"
              onClick={[Function]}
            >
              ackoverflow.com
            </div>
          </div>
          <div
            className="expanded-view-time-spent-text-container"
          >
            <div
              className="expanded-view-time-spent-text"
            >
              0
              :
              11
              :
              14
            </div>
          </div>
          <button
            className="button"
            itemType="button"
            onClick={[Function]}
          >
            <div
              className="button-text"
            >
              Details
            </div>
          </button>
        </div>
      </li>
      <li>
        <div
          className="expanded-view-tile-container"
        >
          <div
            className="expanded-view-icon-container"
          >
            <img
              className="expanded-view-icon"
              height={20}
              src="https://icons.duckduckgo.com/ip3/github.com.ico"
              width={20}
            />
          </div>
          <div
            className="expanded-view-domain-container"
          >
            <div
              className="expanded-view-domain-text"
              onClick={[Function]}
            >
              github.com
            </div>
          </div>
          <div
            className="expanded-view-time-spent-text-container"
          >
            <div
              className="expanded-view-time-spent-text"
            >
              0
              :
              10
              :
              07
            </div>
          </div>
          <button
            className="button"
            itemType="button"
            onClick={[Function]}
          >
            <div
              className="button-text"
            >
              Details
            </div>
          </button>
        </div>
      </li>
      <li>
        <div
          className="expanded-view-tile-container"
        >
          <div
            className="expanded-view-icon-container"
          >
            <img
              className="expanded-view-icon"
              height={20}
              src="https://icons.duckduckgo.com/ip3/google.com.ico"
              width={20}
            />
          </div>
          <div
            className="expanded-view-domain-container"
          >
            <div
              className="expanded-view-domain-text"
              onClick={[Function]}
            >
              google.com
            </div>
          </div>
          <div
            className="expanded-view-time-spent-text-container"
          >
            <div
              className="expanded-view-time-spent-text"
            >
              0
              :
              00
              :
              07
            </div>
          </div>
          <button
            className="button"
            itemType="button"
            onClick={[Function]}
          >
            <div
              className="button-text"
            >
              Details
            </div>
          </button>
        </div>
      </li>
      <li>
        <div
          className="expanded-view-tile-container"
        >
          <div
            className="expanded-view-icon-container"
          >
            <img
              className="expanded-view-icon"
              height={20}
              src="https://icons.duckduckgo.com/ip3/npmjs.com.ico"
              width={20}
            />
          </div>
          <div
            className="expanded-view-domain-container"
          >
            <div
              className="expanded-view-domain-text"
              onClick={[Function]}
            >
              npmjs.com
            </div>
          </div>
          <div
            className="expanded-view-time-spent-text-container"
          >
            <div
              className="expanded-view-time-spent-text"
            >
              0
              :
              00
              :
              05
            </div>
          </div>
          <button
            className="button"
            itemType="button"
            onClick={[Function]}
          >
            <div
              className="button-text"
            >
              Details
            </div>
          </button>
        </div>
      </li>
    </ul>
  </div>,
]
`;

exports[`ShrinkedView renders correctly according to snapshot 1`] = `
Array [
  <div
    className="duration-header"
  >
    <div
      className="duration-header-text"
    >
      Spent here
    </div>
  </div>,
  <div
    className="shrinked-view-container"
  >
    <div
      className="shrinked-view-icon-container"
    >
      <img
        className="shrinked-view-icon"
        height={20}
        src="../resources/missing-website-favicon.png"
        width={20}
      />
    </div>
    <div
      className="shrinked-view-time-spent-text-container"
    >
      <div
        className="shrinked-view-time-spent-text"
      >
        0
        :
        00
        :
        00
      </div>
    </div>
  </div>,
]
`;

exports[`Sorting renders correctly according to snapshot 1`] = `
<div
  className="sorting-container"
>
  <div
    className="sorting-options-label"
  >
    Sort: 
  </div>
  <div
    className="sorting-options-list-container"
  >
    <div
      className="sorting-option-tile-container"
      onClick={[Function]}
    >
      <div
        className="sorting-option-tile-label"
      >
        None
      </div>
    </div>
  </div>
</div>
`;
